error_info.txt
Traceback (most recent call last):
  File "d:\BTS\src\bts\simulation.py", line 112, in simulate
    sim.set_source(
    ~~~~~~~~~~~~~~^
        wavelength_um=source.wavelength_um,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<4 lines>...
        beam_diam_fraction=source.beam_diam_fraction,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "d:\BTS\src\hybrid_simulation\simulator.py", line 228, in set_source
    from hybrid_optical_propagation import SourceDefinition
  File "d:\BTS\src\hybrid_optical_propagation\__init__.py", line 50, in <module>
    from .data_models import (
    ...<4 lines>...
    )
  File "d:\BTS\src\hybrid_optical_propagation\data_models.py", line 739
    R_sq = X**2 + Y**2
IndentationError: unexpected indent

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "d:\BTS\tests\integration\离轴抛物面镜传输误差标准测试文件.py", line 159, in run_oap_test
    result = bts.simulate(
        system,
    ...<3 lines>...
        debug=debug,
    )
  File "d:\BTS\src\bts\simulation.py", line 137, in simulate
    raise SimulationError(f"仿真执行失败: {e}") from e
hybrid_simulation.exceptions.SimulationError: 仿真执行失败: unexpected indent (data_models.py, line 739)
